syntax = "proto3";

option csharp_namespace = "GrpcGateway";

package userBrokerageAccount;

service UserBrokerageAccount {
  rpc QueryUserBrokerageAccounts (QueryUserBrokerageAccountRequest) returns (QueryUserBrokerageAccountResponse);
}

message QueryUserBrokerageAccountRequest {
 optional string referenceId=1;
 optional int64 userAccountId=2;
 optional int64 userBrokerageId=3;
}

message QueryUserBrokerageAccountResponse {
  repeated  QueryUserBrokerageAccountResponseItem items=1;
}

message QueryUserBrokerageAccountResponseItem{
	int64 id=1;
	int64 userAccountId=2;
	string	referenceId=3;
	int32 userBrokerageId=4;
}